# InsightBee

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.dataflow  README.md  analysis_results_100.json  cloudbuild.dataflow.yaml  prompt_template.py  pyproject.toml  sentiment.ipynb
apps/backend/: .gitignore  Gemini_test.py  README.md  analysis.py  analysis_Gemini.py  db_test.py  news.csv  news_analysis_results.csv  news_classified_results.csv  news_classified_results_representatives2.csv  news_test.csv  pyproject.toml
apps/backend-api/: README.md  pyproject.toml
apps/backend-api/app/: main.py
apps/backend/app/: main.py
apps/backend/app/api/: api_router.py  deps.py
apps/backend/app/api/endpoints/: analytics.py  companies.py  news.py  reports.py
apps/backend/app/schemas/: response_dto.py
apps/dataflow/: bq_full_load.py  config.py
apps/dataflow/common/: dart.py  db_sa.py  models.py
apps/dataflow/ingestion/: news_scraping_results.csv  news_scraping_results_final2.csv  test2_final.py  test_final.py  삼성_뉴스_결과.csv
apps/dataflow/ingestion/companies/: load_corpcode.py
apps/dataflow/news_pipeline/: clustering.py  filter.py  filter_rules.py  keywords.py  main.py  scraper.py
apps/dataflow/news_pipline/: filter.py  filter_rules.py  keywords.py  main.py  scraper.py
apps/frontend/: Dockerfile  Dockerfile.frontend  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
apps/frontend/public/data/: newsData.tsx
apps/frontend/src/: App.tsx  index.css
apps/frontend/src/components/loading/: MainLoadingUI.tsx  useReportLoader.ts
apps/frontend/src/components/news/: NewsList.tsx
apps/frontend/src/components/report/: DonutChartTest.tsx  HashTag.tsx  KeywordNews.tsx  NewsCard.tsx  NewsCardList.tsx  NewsModal.tsx  ReportHeader.tsx  Summary.tsx  Tip.tsx  TopicCard.tsx  TopicCardList.tsx  WordCloudTest.tsx  wordCloud.tsx
apps/frontend/src/components/report/keyword/: KeywordNews.tsx  NewsCard.tsx  NewsCardList.tsx  NewsModal.tsx  TopicCard.tsx  TopicCardList.tsx
apps/frontend/src/components/report/mainSummary/: DonutChart.tsx  KeywordList.tsx  Summary.tsx
apps/frontend/src/components/report/newsList/: News.tsx  NewsCardWithTopic.tsx  NewsList.tsx
apps/frontend/src/data/: mock.ts
apps/frontend/src/pages/: Main.tsx  MainLoading.tsx  NewsDetail.tsx  Report.tsx  ReportKeyword.tsx
apps/frontend/src/services/report/: getReport.tsx
fe-insightbee/: package.json
fe-insightbee/src/: index.css
