[project]
name = "insightbee"
version = "0.1.0"
description = ""
authors = [
    {name = "YOOJIIN",email = "yoojiin0328@naver.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.117,<0.118",
  "uvicorn>=0.37,<0.38",
  "python-dotenv>=1.1,<2.0",
  "requests>=2.32",
  "psycopg[binary]>=3.2",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "google-cloud-bigquery (>=3.38.0,<4.0.0)",
  "asyncpg (>=0.30.0,<0.31.0)",
  "pandas (>=2.3.3,<3.0.0)",
  "sentence-transformers (>=5.1.2,<6.0.0)",
  "aiohttp (>=3.13.2,<4.0.0)",
  "trafilatura (>=2.0.0,<3.0.0)",
  "newspaper3k (>=0.2.8,<0.3.0)",
  "selenium (>=4.38.0,<5.0.0)",
  "webdriver-manager (>=4.0.2,<5.0.0)",
  "beautifulsoup4 (>=4.14.2,<5.0.0)",
  "tqdm (>=4.67.1,<5.0.0)"
]

[tool.poetry]
packages = [
  { include = "apps/backend",  from = "." },
  { include = "apps/dataflow", from = "." }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
