[project]
name = "backend-api"
version = "0.1.0"
description = ""
authors = [
    {name = "YOOJIIN",email = "yoojiin0328@naver.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.117.1,<0.118.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "kiwipiepy (>=0.21.0,<0.22.0)",
    "keybert (>=0.9.0,<0.10.0)",
    "bertopic (>=0.17.3,<0.18.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
